# whisper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  whisper.toml
src/: main.rs
src/whisper_core/: mod.rs  whisper_argument.rs  whisper_command.rs
src/whisper_core/exceptions/: config_file_not_found_error.rs  mod.rs  whisper_error.rs
src/whisper_core/models/: mod.rs  whisper_config.rs
src/whisper_core/services/: mod.rs  whisper_config_service.rs  whisper_init_handler_service.rs  whisper_notifyme_service.rs  whisper_testfairy_service.rs
src/whisper_growth/: example_module.rs  mod.rs
src/whisper_ui/: mod.rs  prelude.rs  whisper_command_app.rs  whisper_init_command.rs  whisper_init_gui.rs  whisper_init_handler.rs  whisper_notifyme_command.rs  whisper_testfairy_command.rs
src/whisper_ui/indicators/: progress_bar.rs
