[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
ratatui = "0.28.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.125"
toml = "0.8.19"
